--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	  <!-- Leaflet & Plugins -->
 	  <link rel="stylesheet" href="src/Control.MiniMap.css" />
 	  <link rel="stylesheet" href="css/leaflet.draw.css"/>
-	  <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+	  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.js"></script>
 	  <script src="js/lib/leaflet.draw.js"></script>
 	  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
 	   <script src="src/Control.MiniMap.js" type="text/javascript"></script> 
