--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	  <link rel="stylesheet" href="css/leaflet.draw.css"/>
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.js"></script>
 	  <script src="js/lib/leaflet.draw.js"></script>
-	  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
+	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.css"/>
 	   <script src="src/Control.MiniMap.js" type="text/javascript"></script> 
 
 
