add styles and click event for filters

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div id="map"></div>
             <div id="filters-container">
                 <div id="land-use-container">
-                <div id="filters-button">Filters - Land Use</div>
+                <div id="land-use-button">Filters - Land Use</div>
                 <div id="checkboxes-container">
                     <label class="checkbox-container">Agriculture
                         <input id="check-agriculture" type="checkbox" checked="checked" data-id="0">
@@ -147,6 +147,7 @@
                         <input type="checkbox" checked="checked">
                         <span class="checkmark"></span>
                     </label>
+                </div>
                 </div>
             </div>
         </div>
