--- a/index.html
+++ b/index.html
@@ -56,95 +56,117 @@
                 <div id="filters-button">Filters - Land Use</div>
                 <div id="checkboxes-container">
                     <label class="checkbox-container">Agriculture
-                        <input id="check-agriculture" type="checkbox" checked="checked" data-id="0">
+                        <input id="check-agriculture" type="checkbox" data-filter_id="0">
                         <span class="checkmark"></span>
                     </label>
                     <label class="checkbox-container">Water
-                        <input type="checkbox" checked="checked">
+                        <input id="check-water" type="checkbox" data-filter_id="1">                  
+                        <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
                     <label class="checkbox-container">Swamp
-                        <input type="checkbox" checked="checked">
+                        <input id="check-swamp" type="checkbox" data-filter_id="2">
+                        <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
                     <label class="checkbox-container">Floodable Forest
-                        <input type="checkbox" checked="checked">
+                        <input id="check-floodable_forest" type="checkbox" data-filter_id="3">
+                        <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
                     <label class="checkbox-container">Mountain Forest
-                        <input type="checkbox" checked="checked">
+                        <input id="check-mountain_forest" type="checkbox" data-filter_id="4">
+                        <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
                     <label class="checkbox-container">Non-Floodable Forest
-                        <input type="checkbox" checked="checked">
+                        <input id="check-non_floodable_forest" type="checkbox" data-filter_id="5">
+                        <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
                     <label class="checkbox-container">Unpaved Roads
-                        <input type="checkbox" checked="checked">
+                        <input id="check-unpaved_roads" type="checkbox" data-filter_id="6">
+                        <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
                     <label class="checkbox-container">Paved Roads
-                        <input type="checkbox" checked="checked">
+                        <input id="check-paved_oads" type="checkbox" data-filter_id="7">
+                        <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
                     <label class="checkbox-container">Glacier
-                        <input type="checkbox" checked="checked">
+                        <input id="check-glacier" type="checkbox" data-filter_id="8">
+                        <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
                     <label class="checkbox-container">Pasture
-                        <input type="checkbox" checked="checked">
+                        <input id="check-pasture" type="checkbox" data-filter_id="9">
+                        <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
                     <label class="checkbox-container">Wetland
-                        <input type="checkbox" checked="checked">
+                        <input id="check-wetland" type="checkbox" data-filter_id="10">
+                        <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
                     <label class="checkbox-container">Thicket
-                        <input type="checkbox" checked="checked">
+                        <input id="check-thicket" type="checkbox" data-filter_id="11">
+                        <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
                     <label class="checkbox-container">Mining
-                        <input type="checkbox" checked="checked">
+                        <input id="check-mining" type="checkbox" data-filter_id="12">
+                        <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
                     <label class="checkbox-container">Andean Scrubland
-                        <input type="checkbox" checked="checked">
+                        <input id="check-andean_scrubland" type="checkbox" data-filter_id="13">
+                        <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
                     <label class="checkbox-container">Grass
-                        <input type="checkbox" checked="checked">
+                        <input id="check-grass" type="checkbox" data-filter_id="14">
+                        <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
                     <label class="checkbox-container">Agriculture Grass
-                        <input type="checkbox" checked="checked">
+                        <input id="check-agriculture_grass" type="checkbox" data-filter_id="15">
+                        <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
                     <label class="checkbox-container">Pasture Grass
-                        <input type="checkbox" checked="checked">
+                        <input id="check-pasture_grass" type="checkbox" data-filter_id="16">
+                        <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
                     <label class="checkbox-container">Rocky Ground
-                        <input type="checkbox" checked="checked">
+                        <input id="check-rocky_ground" type="checkbox" data-filter_id="17">
+                        <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
                     <label class="checkbox-container">Savannah
-                        <input type="checkbox" checked="checked">
+                        <input id="check-savannah" type="checkbox" data-filter_id="18">
+                        <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
                     <label class="checkbox-container">Wet Savannah
-                        <input type="checkbox" checked="checked">
+                        <input id="check-wet_savannah" type="checkbox" data-filter_id="19">
+                        <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
                     <label class="checkbox-container">Naked Land
-                        <input type="checkbox" checked="checked">
+                        <input id="check-naked_land" type="checkbox" data-filter_id="20">
+                        <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
                     <label class="checkbox-container">Urban
-                        <input type="checkbox" checked="checked">
+                        <input id="check-urban" type="checkbox" data-filter_id="21">
+                        <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
                     <label class="checkbox-container">Secondary Vegetation
-                        <input type="checkbox" checked="checked">
+                        <input id="check-secondary_vegetation" type="checkbox" data-filter_id="22">
+                        <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
                 </div>
