fix mining link

--- a/mining.html
+++ b/mining.html
@@ -40,7 +40,7 @@
                 <!-- Float links to the right. Hide them on small screens -->
                 <div class="w3-right w3-hide-small">
                     <a href="/" class="w3-bar-item w3-button"> Land Use </a>
-                    <a href="/mining" class="w3-bar-item w3-button"> Mining </a>
+                    <a href="mining.html" class="w3-bar-item w3-button"> Mining </a>
                     <a href="about.html" class="w3-bar-item w3-button">About</a>
                     <a href="help.html" class="w3-bar-item w3-button">Help</a>
                 </div>
