appear three maps begining

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <span class="checkmark"></span>
                     </label>
                     <label class="checkbox-container">Water
-                        <input id="check-water" type="checkbox" data-filter_id="1">                  
+                        <input id="check-water" type="checkbox" checked="true"  data-filter_id="1">                  
                         <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
@@ -115,7 +115,7 @@
                         <span class="checkmark"></span>
                     </label>
                     <label class="checkbox-container">Mining
-                        <input id="check-mining" type="checkbox" data-filter_id="12">
+                        <input id="check-mining" type="checkbox" checked="true" data-filter_id="12">
                         <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
@@ -140,7 +140,7 @@
                         <span class="checkmark"></span>
                     </label>
                     <label class="checkbox-container">Rocky Ground
-                        <input id="check-rocky_ground" type="checkbox" data-filter_id="17">
+                        <input id="check-rocky_ground" type="checkbox" checked="true" data-filter_id="17">
                         <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
