disable fields without data

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <input id="check-glacier" type="checkbox" data-filter_id="8">
                         <span class="checkmark round"></span>
                     </label>
-                    <label class="checkbox-container">Pasture
+                    <label class="checkbox-container disabled">Pasture
                         <input id="check-pasture" type="checkbox" data-filter_id="9">
                         <span class="checkmark round"></span>
                     </label>
@@ -131,11 +131,11 @@
                         <input id="check-rocky_ground" type="checkbox" data-filter_id="17">
                         <span class="checkmark round"></span>
                     </label>
-                    <label class="checkbox-container">Savannah
+                    <label class="checkbox-container">Wet Savannah
                         <input id="check-savannah" type="checkbox" data-filter_id="18">
                         <span class="checkmark round"></span>
                     </label>
-                    <label class="checkbox-container">Wet Savannah
+                    <label class="checkbox-container disabled">Savannah
                         <input id="check-wet_savannah" type="checkbox" data-filter_id="19">
                         <span class="checkmark round"></span>
                     </label>
