--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                         <input id="check-glacier" type="checkbox" data-filter_id="8">
                         <span class="checkmark round"></span>
                     </label>
-                    <label class="checkbox-container disabled">Pasture
+                    <!-- <label class="checkbox-container disabled">Pasture
                         <input id="check-pasture" type="checkbox" data-filter_id="9">
                         <span class="checkmark round"></span>
-                    </label>
+                    </label> -->
                     <label class="checkbox-container">Wetland
                         <input id="check-wetland" type="checkbox" data-filter_id="10">
                         <span class="checkmark round"></span>
@@ -134,11 +134,11 @@
                         <input type="checkbox" >
                         <span class="checkmark"></span>
                     </label>
-                    <label class="checkbox-container">Wet Savannah
+                    <!-- <label class="checkbox-container disabled">Savannah
                         <input id="check-savannah" type="checkbox" data-filter_id="18">
                         <span class="checkmark round"></span>
-                    </label>
-                    <label class="checkbox-container disabled">Savannah
+                    </label> -->
+                    <label class="checkbox-container">Wet Savannah
                         <input id="check-wet_savannah" type="checkbox" data-filter_id="19">
                         <span class="checkmark round"></span>
                     </label>
